Cambios nombre paquete y limpieza